# fathomnet-voxel51

./: .gitignore  CLAUDE.md  GCLOUD.md  README.md  pyproject.toml  update_claude_mcp_config.py
.github/: CODEOWNERS
docs/: ONBOARDING.md  model_inference_plan.md  tasks.md
docs/meeting_notes/: 20251205-mbari-sucess-criteria.md  20251215-mbari-success-criteria-2.md  20251218-mbari-sync.md  20260108-mbari-sync.md  20260115-mbari-sync.md  20260122-mbari-sync.md  20260129-mbari-sync.md
fathomnet_voxel51/: 00_check_gcp_auth.py  01_upload_to_gcs.py  02_ingest_dataset.py  03_add_primary_label.py  04_download_images_local.py  04_import_predictions.py  05_download_images_local.py  05_import_predictions.py  06_update_sample_tags.py  add_primary_label.py  debug_embeddings.py  debug_labels.py  delete_brain_key.py  ingest_dataset.py  setup_fiftyone_credentials.py  upload_to_gcs.py
inference/: pyproject.toml  run_inference.py
inference/results/: submission_experiment-final014.csv
inference/sbatch/: _job.sh  run.sh
notebooks/: 01_load_data_gcp.ipynb  01_upload_to_gcp.ipynb
